@@ -9,34 +9,34 @@ import java.util.stream.Stream;
 
 public class FileReader {
 
-//    public void readFile() throws  FileReaderException{
-//        ClassLoader classLoader = getClass().getClassLoader();
-//        File file = new File(classLoader.getResource("names.txt").getFile());
-//
-//        try (Stream<String> fileLines = Files.lines(Paths.get(file.getPath()))) {
-//            fileLines.forEach(System.out::println);
-//        } catch (IOException e) {
-//            //System.out.println("Something went wrong! Error:" + e);
-//            throw new FileReaderException();
-//        } finally {
-//            System.out.println("I am gonna be here... always!");
-//        }
-//
-//        System.out.println(file.getPath());
-//
-//    }
-
-    public void readFile(final String fileName) throws FileReaderException {
+    public void readFile() throws  FileReaderException{
         ClassLoader classLoader = getClass().getClassLoader();
+        File file = new File(classLoader.getResource("names.txt").getFile());
 
-        try (Stream<String> fileLines = Files.lines(Path.of(classLoader.getResource(fileName).toURI()))) {
+        try (Stream<String> fileLines = Files.lines(Paths.get(file.getPath()))) {
             fileLines.forEach(System.out::println);
-        } catch (Exception e) {
+        } catch (IOException e) {
+            //System.out.println("Something went wrong! Error:" + e);
             throw new FileReaderException();
         } finally {
             System.out.println("I am gonna be here... always!");
         }
+
+        System.out.println(file.getPath());
+
     }
+
+//    public void readFile(final String fileName) throws FileReaderException {
+//        ClassLoader classLoader = getClass().getClassLoader();
+//
+//        try (Stream<String> fileLines = Files.lines(Path.of(classLoader.getResource(fileName).toURI()))) {
+//            fileLines.forEach(System.out::println);
+//        } catch (Exception e) {
+//            throw new FileReaderException();
+//        } finally {
+//            System.out.println("I am gonna be here... always!");
+//        }
+//    }
 
 
 
